types cleanup, added support for stopping all metronome operations when visibility changes in the document and added wake lock support for mobile when the metronome is active to prevent dimming

--- a/src/css/BPM-Grid.css
+++ b/src/css/BPM-Grid.css
@@ -40,6 +40,7 @@
   width: 25px;
   height: 25px;
   background-color: #f821ad;
+  transition: all 0.1s linear;
   border-radius: 50%;
   transform: rotate(calc(360deg / var(--beats) * var(--i) - 90deg))
     translate(237px) rotate(calc(-360deg / var(--beats) * var(--i)));
